fixed additional details overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,7 @@ a {
 h1{
   text-align: center;
 }
+
+p{
+  text-align: justify;
+}
